Time: 34 ms (60.12%), Space: 59.1 MB (81.86%) - LeetHub